backported baby-rabbit's in game movie recording
Former-commit-id: 39e29a67521f1c736fdbdc9e88d2de145fcfba67

--- a/src/Makefile
+++ b/src/Makefile
@@ -44,6 +44,7 @@ CLIENT_OBJS= \
 	engine/main.o \
 	engine/material.o \
 	engine/menus.o \
+	engine/movie.o \
 	engine/normal.o	\
 	engine/octa.o \
 	engine/octaedit.o \
@@ -251,6 +252,10 @@ engine/menus.o: engine/engine.h shared/cube.h shared/tools.h shared/command.h
 engine/menus.o: shared/geom.h shared/ents.h shared/iengine.h shared/igame.h
 engine/menus.o: engine/sound.h engine/world.h engine/octa.h engine/lightmap.h
 engine/menus.o: engine/bih.h engine/texture.h engine/model.h
+engine/movie.o: engine/engine.h shared/cube.h shared/tools.h shared/command.h
+engine/movie.o: shared/geom.h shared/ents.h shared/iengine.h shared/igame.h
+engine/movie.o: engine/sound.h engine/world.h engine/octa.h engine/lightmap.h
+engine/movie.o: engine/bih.h engine/texture.h engine/model.h
 engine/normal.o: engine/engine.h shared/cube.h shared/tools.h
 engine/normal.o: shared/command.h shared/geom.h shared/ents.h
 engine/normal.o: shared/iengine.h shared/igame.h engine/sound.h
