added (inthirdperson) to get value of thirdperson, used it in fov alias
Former-commit-id: 9d9159194e67187ba69049179c4b6fa79eb6592f

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -316,4 +316,4 @@ musicfiles = [
 playmusic = [ music (at $musicfiles (rnd (listlen $musicfiles))) ]
 
 // some aliases
-fov = [ firstpersonfov $arg1 ] // people have complained /fov was removed
+fov = [ if (= (inthirdperson) 1) [ thirdpersonfov $arg1 ] [ firstpersonfov $arg1 ] ] // people have complained /fov was removed
