waypointed and replaced items for panic
Former-commit-id: 2eb22c3d3a2df1f3208442099f099d8eafa6e4b1

--- a/data/maps/panic.cfg
+++ b/data/maps/panic.cfg
@@ -3,9 +3,9 @@
 
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // lighterror 8
-// shadowmapambient 0
+// shadowmapambient 0x000000
 // cloudheight 0.2
-// lavacolour 16729088
+// lavacolour 0xFF4400
 // lightcompress 3
 // lerpsubdivsize 4
 // sinkfric 2.0
@@ -18,7 +18,7 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 40.0
-// numteamplayers 12
+// numteamplayers 10
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -28,7 +28,7 @@
 // lavafog 50
 // lmshadows 1
 // bumperror 3
-impulsegravity 62.5
+// impulsegravity 62.5
 // yawcloudlayer 0
 // cloudscrolly 0.0
 // cloudscrollx 0.0
@@ -37,29 +37,30 @@ impulsegravity 62.5
 // lerpangle 44
 // flarelights 0
 // impulsespeed 50.0
+// cloudcolour 0xFFFFFF
 // spinclouds 0.0
 // causticscale 100
 // edgetolerance 4
-// skylight 0
+// skylight 0x000000
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 32
-// numplayers 12
+// numplayers 8
 // adaptivesample 1
 // maptitle [Flak Panic by Derek 'Favorito' Ponicki]
-// waterfallcolour 0
+// waterfallcolour 0x000000
 // floorz 0.867
 // floatfric 5.0
 // shadowmapangle 0
 // cloudbox []
 // skybox [acord\sky7]
 // floorfric 5.0
-// fogcolour 8427955
+// fogcolour 0x8099B3
 // mapmusic []
 // jumpspeed 50.0
-// watercolour 1060960
+// watercolour 0x103060
 // lightlod 0
-// ambient 25
+// ambient 0x191919
 // slopez 0.5
 // caustictex [<anim:75>textures/caustics]
 // yawsky 0
