--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -18,7 +18,7 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 100.0
-// numteamplayers 12
+numteamplayers 10
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
