--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -167,6 +167,7 @@ newgui game [
 					guibitfield "duel"						mutsselected 0x0008
 					guibitfield "last-man"					mutsselected 0x0010
 					guibitfield "paintball"					mutsselected 0x0020
+					guibitfield "vampire"					mutsselected 0x0040
 
 					mutsselected = (mutscheck $modeselected $mutsselected)
 				]
