fix ragdoll.h by using inliquid, 100 consecutive frags = unstoppable
Former-commit-id: bc4766bd5e626877dd3e122f9ac9b807b1c94a0a

--- a/data/sounds/announcer/alpha/package.cfg
+++ b/data/sounds/announcer/alpha/package.cfg
@@ -19,3 +19,4 @@ registersound	"announcer/alpha/missioncomplete"	224	"air"			//	S_V_MCOMPLETE
 registersound	"announcer/alpha/fragged"			224	"air"			//	S_V_FRAGGED
 registersound	"announcer/alpha/owned"				224	"air"			//	S_V_OWNED
 registersound	"announcer/alpha/owned"				224	"air"			//	S_V_DENIED
+registersound	"announcer/alpha/owned"				224	"air"			//	S_V_SPREE5
