--- a/data/sounds/announcer/beta/package.cfg
+++ b/data/sounds/announcer/beta/package.cfg
@@ -19,3 +19,4 @@ registersound	"announcer/beta/missioncomplete"	224	"air"			//	S_V_MCOMPLETE
 registersound	"announcer/beta/fragged"			224	"air"			//	S_V_FRAGGED
 registersound	"announcer/beta/owned"				224	"air"			//	S_V_OWNED
 registersound	"announcer/beta/owned"				224	"air"			//	S_V_DENIED
+registersound	"announcer/beta/owned"				224	"air"			//	S_V_SPREE5
