--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -53,7 +53,7 @@
 // floatfric 5.0
 // shadowmapangle 0
 // cloudbox []
-// skybox [skyboxes/gradient]
+skybox [skyboxes/grey]
 // floorfric 5.0
 // fogcolour 0xCCCCCC
 // mapmusic []
