missing texture fixes
Former-commit-id: 71a78274fe77b6e100ebca98a9bb316795005b88

--- a/data/maps/dualstar.cfg
+++ b/data/maps/dualstar.cfg
@@ -162,7 +162,7 @@ texture z "acord/concretez.jpg"
 setshader bumpspecmapparallaxworld
 texture c "acord/concrete.jpg" 1 0 0 0.500000 // 14
 texture n "acord/concreten.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/concretez.jpg"
 
 setshader bumpspecmapparallaxworld
@@ -174,31 +174,31 @@ texture z "acord/box1z.jpg"
 setshader bumpspecmapparallaxworld
 texture c "acord/box1.jpg" 1 0 0 0.500000 // 16
 texture n "acord/box1n.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/box1z.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/box2.jpg" 0 0 0 0.500000 // 17
 texture n "acord/box2n.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/box2z.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/box2.jpg" 1 0 0 0.500000 // 18
 texture n "acord/box2n.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/box2z.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/console.jpg" 0 0 0 0.500000 // 19
 texture n "acord/consolen.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/consolez.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/console.jpg" 1 0 0 0.500000 // 20
 texture n "acord/consolen.jpg"
-texture s "acordlowspec.jpg.jpg"
+texture s "acordlowspec.jpg"
 texture z "acord/consolez.jpg"
 
 setshader bumpspecmapparallaxworld
