--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -48,17 +48,17 @@
 // numplayers 6
 // adaptivesample 1
 // maptitle [Bath by LuckyStrike-Rx]
-// waterfallcolour 0x000000
+// waterfallcolour 0x080818
 // floorz 0.867
 // floatfric 5.0
 // shadowmapangle 0
 // cloudbox []
-skybox [skyboxes/grey]
+// skybox [skyboxes/grey]
 // floorfric 5.0
 // fogcolour 0xCCCCCC
 // mapmusic []
 // jumpspeed 50.0
-// watercolour 0x103060
+// watercolour 0x111133
 // lightlod 0
 // ambient 0x323232
 // slopez 0.5
@@ -70,11 +70,11 @@ skybox [skyboxes/grey]
 // fog 800
 // cloudsubdiv 16
 // liquidscale 0.9
-// liquidfric 10.0
+// liquidfric 5.0
 // mmshadows 2
 // ladderspeed 1.0
-// liquiddampen 0.5
-// waterfog 150
+// liquiddampen 1.0
+// waterfog 6
 // blurlms 1
 
 texture water "textures/water.jpg" 0 0 0 1.000000
