made certain water variables map controlled and updated bath accordingly
Former-commit-id: 6c2b0bf71b81fa95ee6c3e2cbc835cca445c21b6

--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -11,6 +11,8 @@
 // sinkfric 2.0
 // cloudblend 1.0
 // cloudlayer []
+// waterlod 1
+// vertwater 0
 // airfric 25.0
 // mmskylight 1
 // spinsky 0.0
@@ -22,6 +24,7 @@
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 62.0
+// watersubdiv 3
 // blurskylight 0
 // spincloudlayer 0.0
 // wallz 0.2
@@ -48,7 +51,7 @@
 // numplayers 6
 // adaptivesample 1
 // maptitle [Bath by LuckyStrike-Rx]
-// waterfallcolour 0x080818
+// waterfallcolour 0x111166
 // floorz 0.867
 // floatfric 5.0
 // shadowmapangle 0
@@ -58,7 +61,7 @@
 // fogcolour 0xCCCCCC
 // mapmusic []
 // jumpspeed 50.0
-// watercolour 0x111133
+// watercolour 0x111166
 // lightlod 0
 // ambient 0x323232
 // slopez 0.5
@@ -66,6 +69,7 @@
 // yawsky 0
 // stairheight 4.1
 // waterspec 150
+// refractfog 1
 // yawclouds 0
 // fog 800
 // cloudsubdiv 16
@@ -74,7 +78,7 @@
 // mmshadows 2
 // ladderspeed 1.0
 // liquiddampen 1.0
-// waterfog 6
+// waterfog 12
 // blurlms 1
 
 texture water "textures/water.jpg" 0 0 0 1.000000
