fade water edge near camera
Former-commit-id: 88d376ec03267b05b4bea1c4e69f37372866fa5f

--- a/data/stdshader.cfg
+++ b/data/stdshader.cfg
@@ -2162,7 +2162,9 @@ watershader "underwaterfade" 0 1 [
 
     TEMP fade;
     TEX fade.a, temp, texture[3], 2D;
-    MAD result.color.a, fade, 4, projtc.z;
+    MOV_SAT fade.r, fragment.position.z;
+    MAD fade.a, fade, 4, projtc.z;
+    MUL result.color.a, fade.a, fade.r;
 
     MAD temp.xy, dudv, 0.01, temp;
     TEX result.color.rgb, temp, texture[3], 2D;
@@ -2311,7 +2313,9 @@ watershader "waterfade" 1 1 [
     TEX reflect, distort, texture[0], 2D;
     TEX refract, distort, texture[3], 2D;
     TEX fade.a, temp, texture[3], 2D;
-    MAD result.color.a, fade, 4, projtc.z;
+    MOV_SAT fade.r, fragment.position.z;
+    MAD fade.a, fade, 4, projtc.z;
+    MUL result.color.a, fade.a, fade.r;
 ] [
     DP3_SAT invfresnel, cam, bump;
     @reflectivity
