--- a/src/bloodfrontier.cbp
+++ b/src/bloodfrontier.cbp
@@ -59,7 +59,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
-				<Option parameters="-hhome -rinit.cfg -du0 -df0 -dw640 -dh480" />
+				<Option parameters="-hhome -rinit.cfg -df0 -dw848 -dh480" />
 				<Option projectCompilerOptionsRelation="1" />
 				<Option projectLinkerOptionsRelation="1" />
 				<Option projectIncludeDirsRelation="1" />
