--- a/data/map.cfg
+++ b/data/map.cfg
@@ -19,27 +19,27 @@ texture	0	"acord/water.jpg"	//	water
 
 setshader	bumpspecmapparallaxworld
 
-texture 0       "<mad:1.0/0.25/0.25>acord/nfloor1.jpg"  0 0 0 0.5
+texture 0       "<mad:0.75/0.25/0.125>acord/nfloor1.jpg"  0 0 0 0.5
 texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
 texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
 texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
 
-texture 0       "<mad:0.25/1.0/0.25>acord/nfloor1.jpg"  0 0 0 0.5
+texture 0       "<mad:0.25/0.75/0.125>acord/nfloor1.jpg"  0 0 0 0.5
 texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
 texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
 texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
 
-texture 0       "<mad:0.25/0.5/1.0>acord/nfloor1.jpg"  0 0 0 0.5
+texture 0       "<mad:0.125/0.25/0.75>acord/nfloor1.jpg"  0 0 0 0.5
 texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
 texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
 texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
 
-texture 0       "<mad:1.0/1.0/0.25>acord/nfloor1.jpg"  0 0 0 0.5
+texture 0       <mad:0.75/0.75/0.25>acord/nfloor1.jpg"  0 0 0 0.5
 texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
 texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
 texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
 
-texture 0       "<mad:1.0/0.25/1.0>acord/nfloor1.jpg"  0 0 0 0.5
+texture 0       "<mad:0.75/0.25/0.75>acord/nfloor1.jpg"  0 0 0 0.5
 texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
 texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
 texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
