--- a/data/maps/d4test.cfg
+++ b/data/maps/d4test.cfg
@@ -25,31 +25,31 @@ setshader stdworld
 texture c "acord/water.jpg" 0 0 0 1.000000
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:1.0/0.25/0.25>acord/nfloor1.jpg" 0 0 0 0.500000
+texture c "<mad:0.75/0.25/0.125>acord/nfloor1.jpg" 0 0 0 0.500000
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.25/1.0/0.25>acord/nfloor1.jpg" 0 0 0 0.500000
+texture c "<mad:0.25/0.75/0.125>acord/nfloor1.jpg" 0 0 0 0.500000
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.25/0.5/1.0>acord/nfloor1.jpg" 0 0 0 0.500000
+texture c "<mad:0.125/0.25/0.75>acord/nfloor1.jpg" 0 0 0 0.500000
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:1.0/1.0/0.25>acord/nfloor1.jpg" 0 0 0 0.500000
+texture c <mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 0.500000
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:1.0/0.25/1.0>acord/nfloor1.jpg" 0 0 0 0.500000
+texture c "<mad:0.75/0.25/0.75>acord/nfloor1.jpg" 0 0 0 0.500000
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
