--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -152,31 +152,31 @@ texture lava "textures/lava.jpg" 0 0 0 8.000000
 texture 1 "textures/lava.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:1.0/0.25/0.25>acord/nfloor1.jpg" 0 0 0 0.500000 // 0
+texture c "<mad:0.75/0.25/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 // 0
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.25/1.0/0.25>acord/nfloor1.jpg" 0 0 0 0.500000 // 1
+texture c "<mad:0.25/0.75/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 // 1
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.25/0.5/1.0>acord/nfloor1.jpg" 0 0 0 0.500000 // 2
+texture c "<mad:0.125/0.25/0.75>acord/nfloor1.jpg" 0 0 0 0.500000 // 2
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:1.0/1.0/0.25>acord/nfloor1.jpg" 0 0 0 0.500000 // 3
+texture c <mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 0.500000 // 3
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:1.0/0.25/1.0>acord/nfloor1.jpg" 0 0 0 0.500000 // 4
+texture c "<mad:0.75/0.25/0.75>acord/nfloor1.jpg" 0 0 0 0.500000 // 4
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
