couple of new textures
Former-commit-id: a062c2705192681cb98cfeacf4e73df6123c3d37

--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1141,6 +1141,37 @@ texture n "acord/light7n.jpg" 0 0 0 0.125
 texture s "acord/highspec.jpg" 0 0 0 0.125
 texture z "acord/light7z.jpg" 0 0 0 0.125
 
+texture 0 "acord/grate4.png" 0 0 0 0.5
+texture n "acord/grate4n.png" 0 0 0 0.5
+texture s "acord/grate4s.png" 0 0 0 0.5
+texture z "acord/grate4z.png" 0 0 0 0.5
+
+texture 0 "acord/grate4.png" 0 0 0 0.5
+texture n "acord/grate4n.png" 0 0 0 0.5
+texture s "acord/grate4s.png" 0 0 0 0.5
+texture z "acord/grate4z.png" 0 0 0 0.5
+
+texture 0 "acord/grate4.png"  1 0 0 0.5
+texture n "acord/grate4n.png" 1 0 0 0.5
+texture s "acord/grate4s.png" 1 0 0 0.5
+texture z "acord/grate4z.png" 1 0 0 0.5
+
+texture 0 "acord/grate5.png" 0 0 0 0.5
+texture n "acord/grate5n.png" 0 0 0 0.5
+texture s "acord/grate5s.png" 0 0 0 0.5
+texture z "acord/grate5z.png" 0 0 0 0.5
+
+texture 0 "acord/grate5.png"  1 0 0 0.5
+texture n "acord/grate5n.png" 1 0 0 0.5
+texture s "acord/grate5s.png" 1 0 0 0.5
+texture z "acord/grate5z.png" 1 0 0 0.5
+
+texture 0 "acord/newfloor1.png" 0 0 0 0.5
+texture n "acord/newfloor1n.png" 0 0 0 0.5
+texture s "acord/newfloor1s.png" 0 0 0 0.5
+texture z "acord/newfloor1z.png" 0 0 0 0.5
+
+
 
 
 setshader stdworld
