--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1171,6 +1171,21 @@ texture n "acord/newfloor1n.png" 0 0 0 0.5
 texture s "acord/newfloor1s.png" 0 0 0 0.5
 texture z "acord/newfloor1z.png" 0 0 0 0.5
 
+texture 0 "acord/newfloor1.png" 0 128 128 0.5
+texture n "acord/newfloor1n.png" 0 128 128 0.5
+texture s "acord/newfloor1s.png" 0 128 128 0.5
+texture z "acord/newfloor1z.png" 0 128 128 0.5
+
+texture 0 "acord/substruct3.png" 0 0 0 0.5
+texture n "acord/substruct3n.png" 0 0 0 0.5
+texture s "acord/substruct3s.png" 0 0 0 0.5
+texture z "acord/substruct3z.png" 0 0 0 0.5
+
+texture 0 "acord/substruct3.png" 0 128 128 0.5
+texture n "acord/substruct3n.png" 0 128 128 0.5
+texture s "acord/substruct3s.png" 0 128 128 0.5
+texture z "acord/substruct3z.png" 0 128 128 0.5
+
 
 
 
