shortened 'delicatessen' to 'deli' and increased numteamplayers
Former-commit-id: 268f6ec8e4b36f371e8689ee71679052afb5d273

--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -20,7 +20,7 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 40.0
-// numteamplayers 10
+numteamplayers 14
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -48,7 +48,7 @@
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 80
-// numplayers 10
+numplayers 10
 // adaptivesample 1
 maptitle [Delicatessen by LuckyStrike-Rx]
 // waterfallcolour 0x000000
