More variables to menus for easier changing.
Former-commit-id: 7eecaf5979cba33da6f2329bfd91a9e84e9c2a2d

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -23,7 +23,7 @@ newgui irc [
 	ircport@ircident = (getalias ircport@ircident)
 	ircnick@ircident = (getalias ircnick@ircident)
 	ircchan@ircident = (getalias ircchan@ircident)
-	
+
 	guistayopen [
 		guitext "saved identities"
 		guislider ircident 0 10
@@ -76,7 +76,7 @@ newgui about [
 	guibar
 	guitext "Based on Cube Engine 2 (C) 2001-2008"
     guitext [by Wouter "Aardappel" van Oortmerssen, Lee "Eihrul" Salzman]
-    guitext "http://sauerbraten.org/" 
+    guitext "http://sauerbraten.org/"
 ]
 
 newgui support [
@@ -479,11 +479,11 @@ newgui findent [
 	guibar
 	guitext "* means wildcard (anything)"
 	tmp = (concat (if $dosearch0 [at $enttypelist $entt] [result "*"]) (if $dosearch1 $enta0 [result "*"]) (if $dosearch2 $enta1 [result "*"]) (if $dosearch3 $enta2 [result "*"]) (if $dosearch4 $enta3 [result "*"]) (if $dosearch5 $enta4 [result "*"]))
-	guistayopen [ 
+	guistayopen [
 		guibutton (format "Search for: %1" $tmp) (format "entfind %1" $tmp)
 		guibutton (format "Print /entfind %1 to console" $tmp) (format "saycommand /entfind %1" $tmp)
 	]
-	
+
 	guitab Type
 	guilist [
 		loop i (+ (div (listlen $enttypelist) 10) 1) [
@@ -496,7 +496,7 @@ newgui findent [
 	]
 ]
 
-  
+
 newmapsize = 12
 savemap_name = temp
 
@@ -504,7 +504,7 @@ newgui editing [
     guibutton "materials.."                           "showgui materials"
     guibutton "find entities"				"showgui findent"
     guibutton "toggle edit mode	(key F1)"              "toggleedit"
-    guibutton "toggle heightmap	(key H)"              ""    
+    guibutton "toggle heightmap	(key H)"              ""
     guibutton "deselect		(key SPACE)"                "cancelsel"
     guibutton "passthrough	(hold ALT)"               "passthrough"
     guibutton "select		drag left mouse   "	          ""
@@ -514,14 +514,14 @@ newgui editing [
     guibutton "move selection	drag right mouse"       ""
     guibutton "copy		(key C)"			                  "copy"
     guibutton "paste		(key V)"			                "paste"
-    
+
     guitab ents
     guilist [
       guilist [
         guibutton "drop entities.."              "showgui dropent"
         guibutton "mapmodels.."                  "showgui mapmodels"
         guibutton "light.."                      "resetlight;showgui newlight"
-    
+
         guibutton "newent playerstart   "
         guibutton "newent weapon"
       ]
@@ -532,7 +532,7 @@ newgui editing [
       ]
     ]
 
-    guitab keys    
+    guitab keys
     guibutton "flip / mirror cube	(key X)"            "flip"
     guibutton "undo		(key Z, U)"                     "undo"
     guibutton "redo		(key I)"                        "redo"
@@ -544,7 +544,7 @@ newgui editing [
     guibutton "select all matching	(M)" "selentfindall"
     guibutton "center view on ent	(COMMA + scroll)" "entautoview"
     guibutton "edit entity console	(PERIOD)" "selentedit"
-    guibutton "toggle heightmap tex	(MMB in heightmapmode)" ""    
+    guibutton "toggle heightmap tex	(MMB in heightmapmode)" ""
     guicheckbox "toggle outline		(key 7)"        outline
     guicheckbox "toggle wireframe		(key 8)"    wireframe
 
@@ -587,14 +587,14 @@ newgui editing [
     guitab mapop
     guitext   Savemap:
     guifield  savemap_name 20 [ savemap $savemap_name ]
-    guibutton [load @savemap_name map]             "map $savemap_name"    
+    guibutton [load @savemap_name map]             "map $savemap_name"
     guibutton "newmap (default size: 12)"          "newmap $newmapsize"
     guislider "newmapsize" 10 16
     guibutton "increase mapsize (2x)"              "mapenlarge"
     guitext   "max undo size (default: 5 MB)"
     guislider "undomegs" 1 10
     guibutton "optimize geometry"                  "remip"
-    guibutton "set map title/author"               "saycommand [/mapmsg ]" 
+    guibutton "set map title/author"               "saycommand [/mapmsg ]"
 
     guitab cfg
     guitext (format "%1.cfg" (mapname))
@@ -674,7 +674,7 @@ newgui trigger3 [
     loop i 9 [
 	    tjt = (concat tag (concatword # $i))
 	    tjc = (concat BTti "=" $i ";" "build_trigger")
-	    guibutton $tjt $tjc 
+	    guibutton $tjt $tjc
     ]
 ]
 
@@ -932,6 +932,23 @@ newgui options [
 		guicheckbox "trilinear filtering (mipmaps)" trilinear
 	]
 
+    guitab   "ui"
+    guitext "team crosshair (default: 1)"
+    guislider teamcrosshair "0 1 2"
+    guitext "crosshair size (default: 0.05)"
+    guislider crosshairsize
+    guitext "crosshair hit speed (default: 500)"
+    guislider crosshairhitspeed "0 2000"
+    guitext "crosshair blend (default: 0.75)"
+    guislider crosshairblend
+    guitext "crosshair health (default: 2)"
+    guislider crosshairhealth
+    guitext "crosshair skew (default: 0.3)"
+    guislider crosshairskew "-1 1"
+    guitext "sniper crosshair size (default: 0.575)"
+    guislider snipecrosshairsize "0 1000"
+    guicheckbox "show crosshair" showcrosshair
+
     guitab   "res"
     guitext "field of view (default: 100)"
     guislider (if $thirdperson [result "thirdpersonfov"] [result "firstpersonfov"])
@@ -1068,11 +1085,11 @@ initentgui = [
   tmp2 = ( ea 2 )
   tmp3 = ( ea 3 )
 ]
-    
+
 genentattributes = [
     entattributes = ""
     n = ( listlen $arg2 )
-    loop i $n [       
+    loop i $n [
         do [
           t@i = [ guitext @(at $arg2 $i) ]
           a@i = [ guislider tmp@i @(at $arg3 (* 2 $i)) @(at $arg3 (+ 1 (* 2 $i))) entupdate ]
@@ -1153,10 +1170,10 @@ newentgui = [
       guitext $tmpt
       guibar
       @entattributes
-      guitab type 
+      guitab type
       guilistsplit n 2 $enttypelist [
-          guibutton $n [ entset @n ]       
-      ]  
+          guibutton $n [ entset @n ]
+      ]
       guitab misc
       @quickeditmenu
     ]
@@ -1198,13 +1215,13 @@ newentgui carrot "tag type" "0 50 0 29"
 newentgui sound "type radius size" "0 20 0 500 0 500"
 newentgui particles "type" "0 3"
 
-contexteditgui = [ 
+contexteditgui = [
   if ($hmapedit) [
     showgui brushes
   ] [
     if (enthavesel) [
-      initentgui; 
-      do [ showgui (et) ] 
+      initentgui;
+      do [ showgui (et) ]
     ] [
       if (havesel) [
         showgui materials
