Include only the most needed variables in the 'ui' tab
Former-commit-id: c5cf2066059f7c59d731cd06d52d13723d16823d

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -873,29 +873,41 @@ newgui options [
     guislider stencilbits
     guitext "anisotropic filtering (default: 0)"
     guilistslider aniso "0 2 4 8 16"
-	guilist [
-    	guicheckbox "bilinear filtering" bilinear
-		guibar
-		guicheckbox "trilinear filtering (mipmaps)" trilinear
-	]
 
     guitab   "ui"
-    guitext "team crosshair (default: 1)"
-    guislider teamcrosshair "0 1 2"
-    guitext "crosshair size (default: 0.05)"
-    guislider crosshairsize
-    guitext "crosshair hit speed (default: 500)"
-    guislider crosshairhitspeed "0 2000"
-    guitext "crosshair blend (default: 0.75)"
-    guislider crosshairblend
-    guitext "crosshair health (default: 2)"
-    guislider crosshairhealth
-    guitext "crosshair skew (default: 0.3)"
-    guislider crosshairskew "-1 1"
-    guitext "sniper crosshair size (default: 0.575)"
-    guislider snipecrosshairsize "0 1000"
     guicheckbox "show crosshair" showcrosshair
-
+    guibar
+    guilist [
+      guitext "crosshair size: "
+      crosshairsizestorage = $crosshairsize
+      guifield crosshairsizestorage 6 [crosshairsize $crosshairsizestorage]
+      guitext " (0 - 1000, default: 0.05)"
+    ]
+    guilist [
+      guitext "sniper crosshair size: "
+      snipecrosshairsizestorage = $snipecrosshairsize
+      guifield snipecrosshairsizestorage 6 [snipecrosshairsize $snipecrosshairsizestorage]
+      guitext " (0 - 1000, default: 0.575)"
+    ]
+    guibar
+    guitext "notice messages"
+    guilist [
+    guilist [
+      guiradio "off" shownotices 0
+      guiradio "basic notices" shownotices 1
+      guiradio "level 2" shownotices 2
+      guiradio "level 3" shownotices 3
+      guiradio "everything" shownotices 4
+    ]
+    guibar
+    guilist [
+      guitext "fps display"
+      guiradio "off" showfps 0
+      guiradio "number only" showfps 1
+      guiradio "verbose" showfps 2
+      guiradio "more verbose" showfps 3
+    ]
+    ]
     guitab   "res"
     guitext "field of view (default: 100)"
     guislider (if $thirdperson [result "thirdpersonfov"] [result "firstpersonfov"])
