create package configs for new texture sets and added them to the default config, other fixes and tweaks wrt editing views and hud spacing
Former-commit-id: 2cb2a19bb700b2c504631d447c841359402a8e38

--- a/data/sounds.cfg
+++ b/data/sounds.cfg
@@ -1,4 +1,4 @@
 exec "sounds/gui.cfg"
-exec "sounds/player/package.cfg" // S_GAMESPECIFIC
+exec "sounds/player/package.cfg"
 exec "sounds/package.cfg"
 exec "sounds/announcer/beta/package.cfg"
