--- a/data/map.cfg
+++ b/data/map.cfg
@@ -1,63 +1,60 @@
-// Blood Frontier: BFA Default Map Settings
+// Blood Frontier: Default Map Settings
 // This file is executed when you create a new map, or if a map does not supply its own config file.
 
 loadsky "skyboxes/black" 0 0
 
-texture	water	"textures/water.jpg"					//	water surface
-texture	1		"textures/waterfall.jpg"				//	waterfall
-texture	1		"textures/watern.jpg"					//	water normals
-texture	1		"textures/waterdudv.jpg"				//	water distortion
-texture 1		"textures/waterfalln.jpg"				//  waterfall normals
-texture 1		"textures/waterfalldudv.jpg"			//  waterfall distortion
+texture water "textures/water.jpg"
+texture 1 "textures/waterfall.jpg"
+texture 1 "textures/watern.jpg"
+texture 1 "textures/waterdudv.jpg"
+texture 1 "textures/waterfalln.jpg"
+texture 1 "textures/waterfalldudv.jpg"
 
-texture	lava	"textures/lava.jpg"		0	0	0	8	//	lava surface
-texture	1		"textures/lava.jpg"		0	0	0	8	//	falling	lava
+texture lava "textures/lava.jpg" 0 0 0 8
+texture 1 "textures/lava.jpg" 0 0 0 8
 
-setshader	stdworld
-texture	0	"acord/clouds.jpg"	//	sky
-texture	0	"acord/water.jpg"	//	water
+setshader stdworld
+texture 0 "acord/clouds.jpg"
+texture 0 "acord/water.jpg"
 
-setshader	bumpspecmapparallaxworld
+setshader bumpspecmapparallaxworld
+texture 0 "<mad:0.75/0.25/0.125>acord/nfloor1.jpg" 0 0 0 0.5
+texture n "acord/nfloor1n.jpg" 0 0 0 0.5
+texture s "acord/nfloor1s.jpg" 0 0 0 0.5
+texture z "acord/nfloor1z.jpg" 0 0 0 0.5
 
-texture 0       "<mad:0.75/0.25/0.125>acord/nfloor1.jpg"  0 0 0 0.5
-texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
-texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
-texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
+setshader bumpspecmapparallaxworld
+texture 0 "<mad:0.25/0.75/0.125>acord/nfloor1.jpg" 0 0 0 0.5
+texture n "acord/nfloor1n.jpg" 0 0 0 0.5
+texture s "acord/nfloor1s.jpg" 0 0 0 0.5
+texture z "acord/nfloor1z.jpg" 0 0 0 0.5
 
-texture 0       "<mad:0.25/0.75/0.125>acord/nfloor1.jpg"  0 0 0 0.5
-texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
-texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
-texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
+setshader bumpspecmapparallaxworld
+texture 0 "<mad:0.125/0.25/0.75>acord/nfloor1.jpg" 0 0 0 0.5
+texture n "acord/nfloor1n.jpg" 0 0 0 0.5
+texture s "acord/nfloor1s.jpg" 0 0 0 0.5
+texture z "acord/nfloor1z.jpg" 0 0 0 0.5
 
-texture 0       "<mad:0.125/0.25/0.75>acord/nfloor1.jpg"  0 0 0 0.5
-texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
-texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
-texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
+setshader bumpspecmapparallaxworld
+texture 0 "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 0.5
+texture n "acord/nfloor1n.jpg" 0 0 0 0.5
+texture s "acord/nfloor1s.jpg" 0 0 0 0.5
+texture z "acord/nfloor1z.jpg" 0 0 0 0.5
 
-texture 0       <mad:0.75/0.75/0.25>acord/nfloor1.jpg"  0 0 0 0.5
-texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
-texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
-texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
+setshader bumpspecmapparallaxworld
+texture 0 "<mad:0.75/0.25/0.75>acord/nfloor1.jpg" 0 0 0 0.5
+texture n "acord/nfloor1n.jpg" 0 0 0 0.5
+texture s "acord/nfloor1s.jpg" 0 0 0 0.5
+texture z "acord/nfloor1z.jpg" 0 0 0 0.5
 
-texture 0       "<mad:0.75/0.25/0.75>acord/nfloor1.jpg"  0 0 0 0.5
-texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
-texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
-texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
-
-texture 0       "<mad:0.75/0.75/0.75>acord/nfloor1.jpg"  0 0 0 0.5
-texture n       "acord/nfloor1n.jpg" 0 0 0 0.5
-texture s       "acord/nfloor1s.jpg" 0 0 0 0.5
-texture z       "acord/nfloor1z.jpg" 0 0 0 0.5
+setshader bumpspecmapparallaxworld
+texture 0 "<mad:0.75/0.75/0.75>acord/nfloor1.jpg" 0 0 0 0.5
+texture n "acord/nfloor1n.jpg" 0 0 0 0.5
+texture s "acord/nfloor1s.jpg" 0 0 0 0.5
+texture z "acord/nfloor1z.jpg" 0 0 0 0.5
 
 exec "acord/package.cfg"
+exec "mitaman/package.cfg"
+exec "luckystrike/package.cfg"
 exec "models/acord/package.cfg"
-
-mapsound "sfx/teleport"			250		"air"
-mapsound "sfx/jumppad"			250		"air"
-mapsound "ambience/wastewind"	25		"air"
-mapsound "ambience/hollowwind"	25		"air"
-mapsound "ambience/machine1"	75		"air"
-mapsound "ambience/water"		100		"air"
-mapsound "ambience/waterfall"	75		"air"
-
-setshader	stdworld
+exec "sounds/ambience/package.cfg"
