--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -1228,3 +1228,13 @@ newgui mapmodels [
 	mapmodelnum = (mapmodelindex)
 	guilistloop 4 2 $mapmodelnum [ showmapmodel $i ]
 ]
+
+newgui seltexinfo [
+    guitext (concatword "Slot: " (getseltex))
+    guilist [ loop x 5 [ 
+        texname = (gettexname (getseltex) $x)
+        texname = (substr $texname (+ (strstr $texname ">") 1)) // chop off any leading commands
+        guiimage (concatword "packages/" $texname) "" 1 1
+    ] ]
+    loop x 5 [ tex = (gettexname (getseltex) $x)); if (strcmp $tex "") [] [guitext $tex]]
+]
