fixes and relights at saner lightprecision
Former-commit-id: 5481cba720cd01959aba787c5fd605846b80722d

--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -9,14 +9,14 @@
 // blurskylight 0
 // bumperror 3
 // causticscale 100
-caustictex "<anim:75>textures/caustics"
+// caustictex "<anim:75>textures/caustics"
 // cloudblend 1.0
-cloudbox ""
+// cloudbox ""
 // cloudclip 0.5
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
 // cloudheight 0.2
-cloudlayer ""
+// cloudlayer ""
 // cloudscale 1.0
 // cloudscrollx 0.0
 // cloudscrolly 0.0
@@ -44,23 +44,23 @@ cloudlayer ""
 // lightcompress 3
 // lighterror 8
 // lightlod 0
-// lightprecision 32
+// lightprecision 86
 // liquiddampen 0.5
 // liquidfric 10.0
 // liquidscale 0.9
 // lmshadows 1
-mapmusic ""
-maptitle "Nova by Derek 'Favorito' Ponicki"
+// mapmusic ""
+// maptitle "Nova by Derek 'Favorito' Ponicki"
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
-numplayers 10
-numteamplayers 12
+// numplayers 10
+// numteamplayers 12
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 2.0
-skybox "acord/overmars"
+// skybox "acord/overmars"
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
@@ -116,7 +116,7 @@ texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg"" 0 0 0 0.500000 // 5
+texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 1.000000 // 5
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
