--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -116,7 +116,7 @@ texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg"" 0 0 0 0.500000 // 5
+texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 1.000000 // 5
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
