--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -9,14 +9,14 @@
 // blurskylight 2
 // bumperror 3
 // causticscale 100
-caustictex "<anim:75>textures/caustics"
+// caustictex "<anim:75>textures/caustics"
 // cloudblend 0.8
-cloudbox "<mad:1/0/0>skyboxes/gradient"
+// cloudbox "<mad:1/0/0>skyboxes/gradient"
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 1.0
 // cloudheight -0.1
-cloudlayer "textures/lava"
+// cloudlayer "textures/lava"
 // cloudscale 0.1
 // cloudscrollx 0.001
 // cloudscrolly 0.001
@@ -49,8 +49,8 @@ cloudlayer "textures/lava"
 // liquidfric 10.0
 // liquidscale 0.9
 // lmshadows 1
-mapmusic ""
-maptitle "Tower by Quinton Reeves"
+// mapmusic ""
+// maptitle "Tower by Quinton Reeves"
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
@@ -60,7 +60,7 @@ maptitle "Tower by Quinton Reeves"
 // shadowmapambient 0x000000
 // shadowmapangle 0
 // sinkfric 3.0
-skybox "skyboxes/stars"
+// skybox "skyboxes/stars"
 // skylight 0x331111
 // skytexture 1
 // slopez 0.5
@@ -113,7 +113,7 @@ texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg"" 0 0 0 0.500000 // 4
+texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 1.000000 // 4
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
