slider based maplist, that lists all maps thanks to loopfiles (feel free to beat me up and/or revert :P)
Former-commit-id: 2559b28a40d626f2daf258ef39e39208cab6f430

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -91,13 +91,10 @@ newgui help [
 	guibutton "get online support" "showgui support"
 ]
 
-maplists = [ "" "" lobbymaps lobbymaps lobbymaps lobbymaps missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
-
 showngamegui = 0
 mapselected = 0
 mutsselected = 0
 modeselected = 4
-extramap = ""
 
 vardef = [
 	guitext (format "%1 " $arg2)
@@ -122,13 +119,16 @@ newgui name [
 ]
 
 wepnames = [ "  plasma" " shotgun" "chaingun" "  flamer" " carbine" "   rifle" "grenades"] //make them all the same size
+maplistsize = 19 //adjust if desired
+mapindex = 0 // maplist len - 19
+maplist = ""
 
 newgui game [
 	if (|| (|| (!= $lastmode $modeselected) (!= $lastmuts $mutsselected)) (!= $showngamegui 1)) [
 		if (&& (!= $lastmode $modeselected) (!= $showngamegui 0)) [ mutsselected = 0 ]
-		ms = (* $modeselected 2)
-		if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
-		do [maplist = $@(at $maplists $ms)]
+		//ms = (* $modeselected 2)
+		//if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
+		//do [maplist = $@(at $maplists $ms)]
 		l = -1
 		loop i (listlen $lobbymaps) [
 			ncurmap = (at $lobbymaps $i)
@@ -149,85 +149,94 @@ newgui game [
 		showngamegui = 1
 	]
 	if (strcmp (at $maplist $mapnum) "?") [ maptxt = $extramap ] [ maptxt = (at $maplist $mapnum) ]
-	guistayopen [ guilist [
+	guistayopen [
 		guilist [
 			guilist [
 				guilist [
-					guititle "gamemode"
-					guiradio "lobby"						modeselected 1
-					guiradio "editing"						modeselected 2
-					guiradio "deathmatch"					modeselected 4
-					guiradio "secure-the-flag"				modeselected 5
-					guiradio "capture-the-flag"				modeselected 6
-					guistrut 1
-					guititle "mutators"
-					guibitfield "multi-sided"				mutsselected 0x0001
-					guibitfield "teamplay"					mutsselected 0x0002
-					guibitfield "instagib"					mutsselected 0x0004
-					guibitfield "duel"						mutsselected 0x0008
-					guibitfield "last-man"					mutsselected 0x0010
-					guibitfield "paintball"					mutsselected 0x0020
-					guibitfield "vampire"					mutsselected 0x0040
+					guilist [
+						guititle "gamemode"
+						guiradio "lobby"						modeselected 1
+						guiradio "editing"						modeselected 2
+						guiradio "deathmatch"					modeselected 4
+						guiradio "secure-the-flag"				modeselected 5
+						guiradio "capture-the-flag"				modeselected 6
+						guistrut 1
+						guititle "mutators"
+						guibitfield "multi-sided"				mutsselected 0x0001
+						guibitfield "teamplay"					mutsselected 0x0002
+						guibitfield "instagib"					mutsselected 0x0004
+						guibitfield "duel"						mutsselected 0x0008
+						guibitfield "last-man"					mutsselected 0x0010
+						guibitfield "paintball"					mutsselected 0x0020
+						guibitfield "vampire"					mutsselected 0x0040
 
-					mutsselected = (mutscheck $modeselected $mutsselected)
-				]
-				guistrut 1
-				guilist [
-					guistrut 1
-					guiimage (format "maps/%1" $maptxt) [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 6 1 "textures/nothumb"
-				]
-			]
-			guistrut 1
-			guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
-			guitext (format " %1selected on map %2%3" $gray $yellow $maptxt) "blank"
-			guistrut 1
-			guilist [
-				guilist [
-					vardef botscale			"scale num bots"
-					vardef botratio			"human to bot ratio"
-					vardef botminskill		"bot min skill level"
-					vardef botmaxskill		"bot max skill level"
-				]
-				guistrut 1
-				guilist [
-					varfld botscale 7
-					varfld botratio 7
-					varfld botminskill 7
-					varfld botmaxskill 7
-				]
-				guistrut 1
-				guilist [
-					guibutton (format "%1add bot" $cyan) [addbot] "team"
-					guibutton (format "%1del bot" $magenta) [delbot] "player"
-				]
-			]
-		]
-		guistrut 1
-		guilist [
-			guititle "maps"
-			n = (listlen $maplist)
-			loop i $n [
-				curmap = (at $maplist $i)
-				if (strcmp $curmap "?") [
+						mutsselected = (mutscheck $modeselected $mutsselected)
+					]
 					guistrut 1
 					guilist [
-						guiradio "" mapnum $i
-						extramapval = $extramap
-						guifield extramapval 16 [extramap = $extramapval]
+						guistrut 1
+						guiimage (format "maps/%1" $maptxt) [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 6 1 "textures/nothumb"
 					]
-					if (!= $n (+ $i 1)) [ guistrut 1 ]
-				] [
-					if (strcmp $curmap "*") [ guistrut 1 ] [ guiradio $curmap mapnum $i ]
+				]
+				guistrut 1
+				guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
+				guitext (format " %1selected on map %2%3" $gray $yellow $maptxt) "blank"
+				guistrut 1
+				guilist [
+					guilist [
+						vardef botscale			"scale num bots"
+						vardef botratio			"human to bot ratio"
+						vardef botminskill		"bot min skill level"
+						vardef botmaxskill		"bot max skill level"
+					]
+					guistrut 1
+					guilist [
+						varfld botscale 7
+						varfld botratio 7
+						varfld botminskill 7
+						varfld botmaxskill 7
+					]
+					guistrut 1
+					guilist [
+						guibutton (format "%1add bot" $cyan) [addbot] "team"
+						guibutton (format "%1del bot" $magenta) [delbot] "player"
+					]
 				]
 			]
 			guistrut 1
 			guilist [
-				guibutton (format "%1vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action"
-				guistrut 1
-				guibutton (format "%1cancel" $red) [cleargui 1] "exit"
+				i = 0;
+				guititle "maps"
+				loopfiles var data/maps bgz [
+					if (! $i) [maplist = ""; i = 1]
+					maplist = (concat $maplist $var)
+				]
+				
+				guilist [
+					nummaps = (listlen $maplist)
+					if (< $maplistsize $nummaps) [
+						guislider mapindex 0 (- $nummaps $maplistsize)
+					]
+					mapindex = (min (max 0 (- $nummaps $maplistsize)) $mapindex) //safeguard
+					mapnum = (min $mapnum $nummaps)
+					
+					guilist [
+						loop i $nummaps [
+							if (&& (>= $i $mapindex) (< (- $i $mapindex) $maplistsize)) [
+								guiradio (at $maplist $i) mapnum $i
+							]
+						]
+					]
+				]
+				guistrut 1 
+				guilist [ 
+					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action" 
+					guistrut 1 
+					guibutton (format "%1cancel" $red) [cleargui 1] "exit" 
+				] 
 			]
 		]
-	] ]
+	]
 	guitab "vars"
 	guistayopen [ guilist [
 		guilist [
@@ -344,9 +353,7 @@ newgui game [
 	mutsselected = (mutscheck $modeselected (mutators))
 	lastmode = -1
 	lastmuts = -1
-	mapnum = 0
 	showngamegui = 0
-	extramap = ""
 ]
 
 
