--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -119,7 +119,7 @@ newgui name [
 ]
 
 wepnames = [ "  plasma" " shotgun" "chaingun" "  flamer" " carbine" "   rifle" "grenades"] //make them all the same size
-maplistsize = 19 //adjust if desired
+maplistsize = 20 //adjust if desired
 mapindex = 0 // maplist len - 19
 maplist = ""
 
@@ -214,9 +214,7 @@ newgui game [
 				
 				guilist [
 					nummaps = (listlen $maplist)
-					if (< $maplistsize $nummaps) [
-						guislider mapindex 0 (- $nummaps $maplistsize)
-					]
+					if (< $maplistsize $nummaps) [ guislider mapindex 0 (- $nummaps $maplistsize) [] 1 ]
 					mapindex = (min (max 0 (- $nummaps $maplistsize)) $mapindex) //safeguard
 					mapnum = (min $mapnum $nummaps)
 					
