Former-commit-id: e23ad20f84f36f0394e127bf85c0c711ee399024

--- a/src/bloodfrontier.cbp
+++ b/src/bloodfrontier.cbp
@@ -618,6 +618,13 @@
 			<Option target="client-dbg" />
 			<Option target="client-prof" />
 		</Unit>
+		<Unit filename="game\ai.h">
+			<Option target="client" />
+			<Option target="client-dbg" />
+			<Option target="client-prof" />
+			<Option target="server" />
+			<Option target="server-dbg" />
+		</Unit>
 		<Unit filename="game\aiman.h">
 			<Option target="client" />
 			<Option target="client-dbg" />
