fixing some server stuff
Former-commit-id: cd24b4b47f836475f8324a20570ec96272b1ab51

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -363,7 +363,7 @@ newgui servers [
 			guibutton "default sort "				serversortreset
 			guicheckbox "search lan "				searchlan
             guibar
-            guibutton "localhost "                  [connect localhost] server
+            guibutton "disconnect "                 disconnect server
             guibutton "lan "                        lanconnect          server
 		]
 	]
